--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -1,36 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/crime_title_label"
         style="@android:style/Widget.DeviceDefault.Light.TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_title_label" />
+        android:text="@string/crime_title_label"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <EditText
         android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/crime_title_hint" />
+        android:hint="@string/crime_title_hint"
+        app:layout_constraintTop_toBottomOf="@id/crime_title_label"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
+        android:id="@+id/crime_details_label"
         style="@android:style/Widget.DeviceDefault.Light.TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_details_label" />
+        android:text="@string/crime_details_label"
+        app:layout_constraintTop_toBottomOf="@id/crime_title"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-        android:id="@+id/crime_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/crime_date_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/crime_details_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/crime_date_time"/>
+
+    <Button
+        android:id="@+id/crime_date_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/crime_details_label"
+        app:layout_constraintLeft_toRightOf="@id/crime_date_date"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <CheckBox
         android:id="@+id/crime_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_solved_label" />
+        android:text="@string/crime_solved_label"
+        app:layout_constraintTop_toBottomOf="@id/crime_date_date"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
