--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -17,11 +17,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/crime_solved"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/crime_date"
+        app:layout_constraintBottom_toTopOf="@id/crime_date_date"
         tools:text="Crime Title" />
 
     <TextView
-        android:id="@+id/crime_date"
+        android:id="@+id/crime_date_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_margin"
